test/library/standard/Sort/errors/error-multiple-interfaces.compopts
-scomparator=R1
-scomparator=R2
-scomparator=R3
-scomparator=R4
