test/library/standard/Sort/errors/error-multiple-interfaces.3.good
error-multiple-interfaces.chpl:27: error: The comparator R3 should only implement one sort comparator interface.
